<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#0099cc"
             tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView android:id="@+id/fullscreen_content"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:keepScreenOn="true"
                  android:textColor="#33b5e5"
                  android:textStyle="bold"
                  android:textSize="50sp"
                  android:gravity="center"
                  android:text="@string/playagame"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="96dp">
            <Button android:id="@+id/rock"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rock"/>
            <Button android:id="@+id/paper"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/paper"/>
            <Button android:id="@+id/scissors"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/scissors"/>
        </LinearLayout>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:srcCompat="@drawable/iconmonstr"
                android:id="@+id/playimage" android:contentDescription="@string/todo"/>
        </LinearLayout>
</FrameLayout>